UI/UX Preferences Themes 3D Viewport Active Vertex #119640

Closed
opened 2024-03-18 21:55:14 +01:00 by Swift · 4 comments

System Information
Operating system: MacOS Sonoma v 14.4
Graphics card: Apple M2 Pro (GPU - 16 cores); Metal

Blender Version
Blender 4.02 and 4.1 (blender-4.1.0-candidate+v41.714ebd6890c2-darwin.arm64-release)

Short description of error
Although the following can happen in 4.02, the description mostly is in reference to 4.1 release candidate, noted above. Blender Metal settings as Kernel Optimization: Full; MetalRT: Auto

Customizing (Default Theme, "Presets", I guess) Preferences > Themes > 3D Viewport; Active Vertex does not switch to customized color in 3D Viewport (Edit Mode) via color picker types; Circle (HSV), Circle (HSV) , Square (SV + H) et cetera. Active Vertex remains white in 3d Viewport's Edit mode.

Steps to Reproduce

  • Open default scene -> switch to edit mode -> select any vertex
  • Open preferences -> Theme -> 3D Viewport -> Active Vertex -> change color

Not related to this report In addition, color picker indicators, e.g., color field circle, and gradient color slider bar/rectangle(?) can jump around when interfacing the other. For example: when moving the color slider bar up or down the color field circle will jump around sporadically, as though "snap-jumping". And at times snap to the center (white), or closest edge of the color field, which, more or less, the snap-jumping stops.

As a note: In Properties Materials tab under Surface Base Color the said snap-jumping anomaly does not occur in the color picker. Only happens in the Preferences.

**System Information** Operating system: MacOS Sonoma v 14.4 Graphics card: Apple M2 Pro (GPU - 16 cores); Metal **Blender Version** Blender 4.02 and 4.1 (blender-4.1.0-candidate+v41.714ebd6890c2-darwin.arm64-release) **Short description of error** Although the following can happen in 4.02, the description mostly is in reference to 4.1 release candidate, noted above. Blender Metal settings as Kernel Optimization: Full; MetalRT: Auto Customizing (Default Theme, "Presets", I guess) Preferences > Themes > 3D Viewport; Active Vertex does not switch to customized color in 3D Viewport (Edit Mode) via color picker types; Circle (HSV), Circle (HSV) , Square (SV + H) et cetera. Active Vertex remains white in 3d Viewport's Edit mode. **Steps to Reproduce** - Open default scene -> switch to edit mode -> select any vertex - Open preferences -> Theme -> 3D Viewport -> Active Vertex -> change color - - - <details> <summary> Not related to this report </summary> In addition, color picker indicators, e.g., color field circle, and gradient color slider bar/rectangle(?) can jump around when interfacing the other. For example: when moving the color slider bar up or down the color field circle will jump around sporadically, as though "snap-jumping". And at times snap to the center (white), or closest edge of the color field, which, more or less, the snap-jumping stops. As a note: In Properties Materials tab under Surface Base Color the said snap-jumping anomaly does not occur in the color picker. Only happens in the Preferences. </details>
Swift added the
Priority
Normal
Status
Needs Triage
Type
Report
labels 2024-03-18 21:55:14 +01:00
Member

Hi, thanks for the report. I guess two different issues are mentioned here, right?

Active Vertex does not switch to customized color

Can confirm this. editmesh_active (active vertex/edge/face) property is used instead of vertex_active.
I think we can remove vertex_active to avoid confusion.

In addition, color picker indicators, e.g., color field circle, and gradient color slider bar/rectangle(?) can jump around when interfacing the other

Unable to confirm this. Can you report this separately? I'll remove that information from this report.

Hi, thanks for the report. I guess two different issues are mentioned here, right? > Active Vertex does not switch to customized color Can confirm this. `editmesh_active` (active vertex/edge/face) property is used instead of `vertex_active`. I think we can remove `vertex_active` to avoid confusion. > In addition, color picker indicators, e.g., color field circle, and gradient color slider bar/rectangle(?) can jump around when interfacing the other Unable to confirm this. Can you report this separately? I'll remove that information from this report.
Pratik Borhade added
Module
User Interface
Status
Confirmed
and removed
Status
Needs Triage
labels 2024-03-19 07:05:54 +01:00
Member

editmesh_active (active vertex/edge/face) property is used instead of vertex_active.

But this is intentional, not a bug.

> `editmesh_active` (active vertex/edge/face) property is used instead of `vertex_active`. But this is intentional, not a bug.
Blender Bot added
Status
Archived
and removed
Status
Confirmed
labels 2024-03-19 07:46:18 +01:00
Author

Hi.
Thank you for your response.
I suppose there are two issues, but I believed them to be relevant to each other.

Per your request, I have submitted a new report, titled UI/UX Blender Preferences Color Picker Anomaly, you should find it here: #119676. Which focuses on the Color Picker anomaly. I included a .mov video in that report. For clarification, I demonstrate not able to customize Active Vertex at the end of the video.

Hi. Thank you for your response. I suppose there are two issues, but I believed them to be relevant to each other. Per your request, I have submitted a new report, titled UI/UX Blender Preferences Color Picker Anomaly, you should find it here: [#119676](https://projects.blender.org/blender/blender/issues/119676#issue-127512). Which focuses on the Color Picker anomaly. I included a .mov video in that report. For clarification, I demonstrate not able to customize Active Vertex at the end of the video.
Member

Thanks, no both were unrelated. Re active vertex issue, I've created a PR to remove that option from 3D viewport theme !119649

Thanks, no both were unrelated. Re `active vertex` issue, I've created a PR to remove that option from 3D viewport theme !119649
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#119640
No description provided.